--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -22,13 +22,149 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-        <include
+        android:layout_height="wrap_content"
+        android:paddingTop="10dp"
+        android:paddingLeft="10dp"
+        android:id="@+id/layout_item_question">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/layout_item_question"
-            layout="@layout/fragment_item_question">
-        </include>
+            android:layout_height="wrap_content">
+            <RelativeLayout
+                android:layout_width="310dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp">
+                <TextView
+                    android:id="@+id/txt_qcontent"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="jjj"
+                    android:ellipsize="end"
+                    android:maxLines="3"
+                    android:singleLine="false"
+                    android:layout_marginTop="0dp"
+                    android:textColor="#444444"
+                    android:textSize="14sp" />
+            </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="40dp"
+                android:layout_height="wrap_content">
+                <!--<ImageButton
+                    android:id="@+id/btn_lik"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginRight="5dp"
+                    android:visibility="gone"
+                    android:background="@drawable/ico_suggest"/>-->
+
+                <!-- Btn Like -->
+                <ImageButton
+                    android:id="@+id/btn_like_question"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginRight="5dp"
+                    android:visibility="invisible"
+                    android:background="@mipmap/ico_like_light_grey_24"/>
+            </RelativeLayout>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="3dp"
+            android:paddingBottom="5dp">
+
+            <!-- Tags -->
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="2dp"
+                android:id="@+id/ly_themes"
+                android:gravity="left" >
+                <ImageView
+                    android:id="@+id/ic_tag_blue"
+                    android:onClick="profileOn"
+                    android:layout_width="10dp"
+                    android:layout_height="10dp"
+                    android:src="@drawable/icon_tag_blue"
+                    android:layout_marginTop="3dp" />
+                <TextView
+                    android:id="@+id/txt_qtags"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textSize="12sp"
+                    android:layout_marginLeft="15dp"
+                    android:text="Bebés"/>
+            </RelativeLayout>
+        </LinearLayout>
+        <!-- Reporte -->
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="11dp">
+            <LinearLayout
+                android:layout_width="240dp"
+                android:layout_height="match_parent">
+                <TextView
+                    android:id="@+id/txt_qanswers"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textAlignment="center"
+                    android:textSize="11sp"
+                    android:textColor="@color/mediumGrey"
+                    android:text="10 respuestas"
+                    />
+                <TextView
+                    android:id="@+id/txt_separator"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="·"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"/>
+                <TextView
+                    android:id="@+id/txt_pcomments"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textAlignment="center"
+                    android:textSize="11sp"
+                    android:textColor="@color/mediumGrey"
+                    android:text="10 Comentarios"
+                    />
+            </LinearLayout>
+
+            <!-- User -->
+            <RelativeLayout
+                android:layout_width="130dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/link_user"
+                android:gravity="right"
+                android:paddingRight="20dp">
+                <ImageView
+                    android:id="@+id/ic_user"
+                    android:onClick="profileOn"
+                    android:layout_width="19dp"
+                    android:layout_height="19dp"
+                    android:src="@drawable/ico_profile_grey" />
+                <TextView
+                    android:id="@+id/txt_quser"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textSize="12sp"
+                    android:layout_marginLeft="23dp"
+                    android:paddingTop="2dp"
+                    android:paddingBottom="4dp"
+                    android:text="User"
+                    android:textColor="@color/colorThird"
+                    android:onClick="profileOn"/>
+            </RelativeLayout>
+        </LinearLayout>
     </LinearLayout>
 
     <!-- Answers -->
