--- a/app/src/main/res/layout/fragment_item_question.xml
+++ b/app/src/main/res/layout/fragment_item_question.xml
@@ -3,11 +3,15 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp">
+    android:paddingLeft="10dp"
+    android:layout_marginTop="7dp"
+    android:layout_marginBottom="10dp"
+    android:paddingRight="10dp">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="right"
+        android:layout_marginTop="5dp"
         android:paddingRight="10dp">
         <!-- Fecha -->
         <TextView
@@ -17,7 +21,7 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="2 min"
             android:textColor="#999999"
-            android:textSize="12sp" />
+            android:textSize="11sp" />
         <!-- Like -->
         <ImageButton
             android:id="@+id/btn_like_question"
@@ -34,7 +38,6 @@
             android:layout_marginRight="5dp"
             android:visibility="gone"
             android:background="@drawable/ico_suggest"/>
-
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
@@ -44,13 +47,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text=""
+            android:text="jjj"
             android:ellipsize="end"
             android:maxLines="3"
             android:singleLine="false"
-            android:layout_marginTop="3dp"
+            android:layout_marginTop="0dp"
             android:textColor="#444444"
             android:textSize="14sp" />
+        <ImageButton
+            android:id="@+id/btn_lik"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginRight="5dp"
+            android:visibility="gone"
+            android:background="@drawable/ico_suggest"/>
     </RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -59,35 +70,52 @@
         android:paddingBottom="5dp">
 
         <!-- Tags -->
-        <RelativeLayout
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="2dp"
             android:id="@+id/ly_themes"
             android:gravity="left" >
             <ImageView
-                android:id="@+id/ic_tag_blue"
+                android:id="@+id/ic_tag1"
                 android:onClick="profileOn"
                 android:layout_width="10dp"
                 android:layout_height="10dp"
-                android:src="@drawable/ic_tag"
+                android:src="@drawable/icon_tag_blue_2"
+                android:layout_marginLeft="5dp"
                 android:layout_marginTop="3dp" />
             <TextView
-                android:id="@+id/txt_qtags"
+                android:id="@+id/txt_tag1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textSize="12sp"
-                android:layout_marginLeft="15dp"
+                android:layout_marginLeft="5dp"
                 android:text="Bebés"/>
-        </RelativeLayout>
+            <ImageView
+                android:id="@+id/ic_tag2"
+                android:onClick="profileOn"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
+                android:layout_marginLeft="5dp"
+                android:src="@drawable/icon_tag_blue_2"
+                android:layout_marginTop="3dp" />
+            <TextView
+                android:id="@+id/txt_tag2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textSize="12sp"
+                android:layout_marginLeft="5dp"
+                android:text="Bebés"/>
+        </LinearLayout>
     </LinearLayout>
     <!-- Reporte -->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="2dp">
+        android:paddingBottom="11dp">
         <LinearLayout
             android:layout_width="240dp"
             android:layout_height="match_parent">
@@ -128,8 +156,8 @@
             <ImageView
                 android:id="@+id/ic_user"
                 android:onClick="profileOn"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:layout_width="19dp"
+                android:layout_height="19dp"
                 android:src="@drawable/ico_profile_grey" />
             <TextView
                 android:id="@+id/txt_quser"
