--- a/app/src/main/res/layout/fragment_item_question.xml
+++ b/app/src/main/res/layout/fragment_item_question.xml
@@ -14,14 +14,14 @@
         android:layout_marginTop="5dp"
         android:paddingRight="10dp">
         <!-- Fecha -->
-        <TextView
+        <!--<TextView
             android:id="@+id/txt_qdatetime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="2 min"
             android:textColor="#999999"
-            android:textSize="11sp" />
+            android:textSize="11sp" />-->
         <!-- Like -->
         <ImageButton
             android:id="@+id/btn_like_question"
@@ -115,21 +115,25 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="11dp">
-        <LinearLayout
-            android:layout_width="240dp"
-            android:layout_height="match_parent">
+        android:paddingBottom="11dp"
+        android:orientation="horizontal">
+        <RelativeLayout
+            android:id="@+id/ly_answers"
+            android:layout_width="220dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="left" >
             <TextView
                 android:id="@+id/txt_qanswers"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textAlignment="center"
-                android:textSize="11sp"
+                android:textSize="13sp"
                 android:textColor="@color/mediumGrey"
+                android:layout_alignParentLeft="true"
                 android:text="10 respuestas"
                 />
-            <TextView
+            <!--<TextView
                 android:id="@+id/txt_separator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -145,33 +149,37 @@
                 android:textSize="11sp"
                 android:textColor="@color/mediumGrey"
                 android:text="10 Comentarios"
-                />
-        </LinearLayout>
+                />-->
+        </RelativeLayout>
 
-        <!-- User -->
         <RelativeLayout
-            android:layout_width="130dp"
+            android:id="@+id/link_user"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/link_user">
+            android:clickable="true"
+            android:layout_alignParentRight="true"
+            android:gravity="right">
             <ImageView
                 android:id="@+id/ic_user"
-                android:onClick="profileOn"
                 android:layout_width="19dp"
                 android:layout_height="19dp"
-                android:src="@drawable/ico_profile_grey" />
+                android:src="@drawable/ico_profile_grey"
+                android:layout_marginRight="5dp" />
             <TextView
                 android:id="@+id/txt_quser"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textSize="12sp"
-                android:layout_marginLeft="23dp"
+                android:textSize="13sp"
+                android:text="username"
                 android:paddingTop="2dp"
                 android:paddingBottom="4dp"
-                android:text="User"
-                android:textColor="@color/colorThird"
-                android:onClick="profileOn"/>
+                android:layout_toRightOf="@+id/ic_user"
+                android:textColor="@color/colorThird" />
         </RelativeLayout>
+
+
+
     </LinearLayout>
 
 
