--- a/app/src/main/res/layout/fragment_item_guru.xml
+++ b/app/src/main/res/layout/fragment_item_guru.xml
@@ -5,6 +5,10 @@
     android:layout_height="wrap_content"
     android:paddingBottom="20dip"
     android:paddingTop="20dip">
+    <com.example.expandablelistwithgirdview.CustomGridView
+        android:id="@+id/gridView"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
 <!-- <com.jws.MyExpandableListView
         android:id="@+id/expList"
