--- a/app/src/main/res/layout/fragment_list_gurus.xml
+++ b/app/src/main/res/layout/fragment_list_gurus.xml
@@ -11,6 +11,7 @@
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
         android:layout_width="match_parent"
-        android:transcriptMode="alwaysScroll"/>
+        android:transcriptMode="normal"
+        android:groupIndicator="@null"/>
 
 </LinearLayout>
