--- a/app/src/main/res/layout/view_categories_gurus.xml
+++ b/app/src/main/res/layout/view_categories_gurus.xml
@@ -3,17 +3,20 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp">
+    android:paddingLeft="0dp"
+    android:paddingRight="10dp"
+    android:background="#edf4f4">
+    <!--     android:background="#e8efef" -->
 
     <ImageView
         android:layout_width="15dp"
         android:layout_height="15dp"
         android:id="@+id/ic_user"
         android:src="@drawable/ico_config"
-        android:layout_marginLeft="30dp"
+        android:layout_marginLeft="13dp"
         android:layout_marginRight="5dp"
-        android:layout_marginTop="3dp" />
+        android:layout_marginTop="11dp"
+        android:layout_marginBottom="11dp"/>
 
     <TextView
         android:id="@+id/txt_tag"
@@ -22,5 +25,6 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textSize="14sp"
         android:textColor="#333333"
+        android:layout_marginTop="9dp"
         android:textStyle="bold" />
 </LinearLayout>
